<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/std_margin"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >

<ScrollView
        android:id="@+id/scrollviewer"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/birth_date_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/birthDateSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:entries="@array/birth_date_items"
                android:prompt="@string/birth_date_title" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/lstklasse_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/lstKlasseSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:entries="@array/lstklasse_items"
                android:prompt="@string/lstklasse_title" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/kinderfrei_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/kinderfreiSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:entries="@array/kinderfrei_items"
                android:prompt="@string/kinderfrei_title" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/kirchensteuer_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/kirchensteuerSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:entries="@array/kirchensteuer_items"
                android:prompt="@string/kirchensteuer_title" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/bundesland_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/bundeslandSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:entries="@array/bundesland_items"
                android:prompt="@array/bundesland_items" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kv_beitrag_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/kvBeiEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="center_vertical|right|start|left"
                android:inputType="numberDecimal"
                android:text="@string/kv_bei_default_value" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rvpflichtig_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/rvPflichtigRadioGroup"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
            android:layout_span="2" >

                <RadioButton
                    android:id="@+id/rvPflichtigRadioButtonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="@string/glob_no" />

                <RadioButton
                    android:id="@+id/rvPflichtigRadioButtonYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:tag="0"
                    android:text="@string/glob_yes" />

            </RadioGroup>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unter_23_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/under23RadioGroup"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
            android:layout_span="2" >

                <RadioButton
                    android:id="@+id/under23RadioButtonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:tag="1"
                    android:text="@string/glob_no" />

                <RadioButton
                    android:id="@+id/under23RadioButtonYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="0"
                    android:text="@string/glob_yes" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeitraum_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/zeitraumSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:entries="@array/zeitraum_items"
                android:prompt="@string/zeitraum_title" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brutto_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/bruttoEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="onClickBerechnenButton"
                android:text="@string/button_berechnen_title" />

        </TableRow>

    </TableLayout>
    </ScrollView>

</FrameLayout>
